theLanguageEmporium/force-app/main/default/objects/Learner_Access__c/Learner_Access__c.object-meta.xml
<CustomObject>
    <label>Learner Access</label>
    <nameField>
        <displayFormat>AccessID-{0000}</displayFormat>
        <label>Learner Access ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learner Access</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>