theLanguageEmporium/force-app/main/default/objects/Learner_Access__c/fields/Learner__c.field-meta.xml
<CustomField>
    <fullName>Learner__c</fullName>
    <label>Learner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Learner Access</relationshipLabel>
    <relationshipName>Learner_Access</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>