theLanguageEmporium/force-app/main/default/objects/Learner_Access__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Learner Access</relationshipLabel>
    <relationshipName>Learner_Access</relationshipName>
    <type>Lookup</type>
</CustomField>